--- a/index.html
+++ b/index.html
@@ -10,42 +10,54 @@
 <body>
     <div class="container">
         <div class="container_2">
+        <div class="bot-class">
             <div class="screen"></div>
-        <div class="class">
-            <div class="control">
-                <button>C</button>
-                <button>del</button>
-                <button>%</button>
+                <div class="control">
+                    <button id="c-btn">C</button>
+                    <button id="del-btn">del</button>
+                    <button id="div-btn">%</button>
+                </div>
+                <div class="operation">
+                    <button id="mul-btn">X</button>
+                    <button id="add-btn">+</button>
+                    <button id="min-btn">-</button>
+                    <button id="eq-btn">=</button>
+                </div>
+                <div class="number">
+                    <button id="seven-btn">7</button>
+                        <button id="eight-btn">8</button>
+                        <button id="nine-btn">9</button>
+                        <button id="four-btn">4</button>
+                        <button id="five-btn">5</button>
+                        <button id="six-btn">6</button>
+                        <button id="one-btn">1</button>
+                        <button id="two-btn">2</button>
+                        <button id="three-btn">3</button>
+                        <button id="sign-btn">+/-</button>
+                        <button id="zero-btn">0</button>
+                        <button id="dot-btn">.</button>
+                    <!-- <div class="last">
+                        <button id="seven-btn">7</button>
+                        <button id="eight-btn">8</button>
+                        <button id="nine-btn">9</button>
+                    </div>
+                    <div class="middle">
+                        <button id="four-btn">4</button>
+                        <button id="five-btn">5</button>
+                        <button id="six-btn">6</button>
+                    </div>
+                    <div class="first">
+                        <button id="one-btn">1</button>
+                        <button id="two-btn">2</button>
+                        <button id="three-btn">3</button>
+                    </div>
+                    <div class="special">
+                        <button id="sign-btn">+/-</button>
+                        <button id="zero-btn">0</button>
+                        <button id="dot-btn">.</button> -->
+                    </div>
+                </div>
             </div>
-            <div class="operation">
-                <button>X</button>
-                <button>+</button>
-                <button>-</button>
-                <button>=</button>
-            </div>
-            <div class="number">
-                <div class="last">
-                    <button>7</button>
-                    <button>8</button>
-                    <button>9</button>
-                </div>
-                <div class="middle">
-                    <button>4</button>
-                    <button>5</button>
-                    <button>6</button>
-                </div>
-                <div class="first">
-                    <button>1</button>
-                    <button>2</button>
-                    <button>3</button>
-                </div>
-                <div class="special">
-                    <button>+/-</button>
-                    <button>0</button>
-                    <button>.</button>
-                </div>
-            </div>
-        </div>
         </div>
     </div>
 </body>
