--- a/index.html
+++ b/index.html
@@ -3,59 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
     <script src="index.js" defer></script>
     <title>Web_calculator</title>
 </head>
 <body>
     <div class="container">
-        <div class="container_2">
-        <div class="bot-class">
-            <div class="screen"></div>
-                <div class="control">
-                    <button id="c-btn">C</button>
-                    <button id="del-btn">del</button>
-                    <button id="div-btn">%</button>
-                </div>
-                <div class="operation">
-                    <button id="mul-btn">X</button>
-                    <button id="add-btn">+</button>
-                    <button id="min-btn">-</button>
-                    <button id="eq-btn">=</button>
-                </div>
+        <div class="adjust">
+            <div class="bot-class">
+                <div class="screen"></div>
                 <div class="number">
-                    <button id="seven-btn">7</button>
-                        <button id="eight-btn">8</button>
-                        <button id="nine-btn">9</button>
-                        <button id="four-btn">4</button>
-                        <button id="five-btn">5</button>
-                        <button id="six-btn">6</button>
-                        <button id="one-btn">1</button>
-                        <button id="two-btn">2</button>
-                        <button id="three-btn">3</button>
-                        <button id="sign-btn">+/-</button>
-                        <button id="zero-btn">0</button>
-                        <button id="dot-btn">.</button>
-                    <!-- <div class="last">
+                    <button id="c-btn" class="span-2">Clear</button>
+                    <button id="del-btn" class="span-2">del</button>
+                    <div>
                         <button id="seven-btn">7</button>
                         <button id="eight-btn">8</button>
                         <button id="nine-btn">9</button>
+                        <button id="min-btn">-</button>
                     </div>
-                    <div class="middle">
+                    <div>
                         <button id="four-btn">4</button>
                         <button id="five-btn">5</button>
                         <button id="six-btn">6</button>
+                        <button id="add-btn">+</button>
                     </div>
-                    <div class="first">
+                    <div>
                         <button id="one-btn">1</button>
                         <button id="two-btn">2</button>
                         <button id="three-btn">3</button>
+                        <button id="div-btn">X</button>
                     </div>
-                    <div class="special">
-                        <button id="sign-btn">+/-</button>
+                    <div>
+                        <button id="sign-btn">.</button>
                         <button id="zero-btn">0</button>
-                        <button id="dot-btn">.</button> -->
-                    </div>
+                        <button id="dot-btn">=</button>
+                        <button id="mul-btn">%</button>
+                    </div>    
                 </div>
             </div>
         </div>
