--- a/index.html
+++ b/index.html
@@ -19,32 +19,33 @@
                     <button id="c-btn" class="span-2">Clear</button>
                     <button id="del-btn" class="span-2">del</button>
                     <div>
-                        <button id="seven-btn" class="value_num">7</button>
-                        <button id="eight-btn" class="value_num">8</button>
-                        <button id="nine-btn" class="value_num">9</button>
-                        <button id="min-btn" class="sign">-</button>
+                        <button id="data">7</button>
+                        <button id="data">8</button>
+                        <button id="data">9</button>
+                        <button id="sign">-</button>
                     </div>
                     <div>
-                        <button id="four-btn" class="value_num">4</button>
-                        <button id="five-btn" class="value_num">5</button>
-                        <button id="six-btn" class="value_num">6</button>
-                        <button id="add-btn" class="sign">+</button>
+                        <button id="data">4</button>
+                        <button id="data">5</button>
+                        <button id="data">6</button>
+                        <button id="sign">+</button>
                     </div>
                     <div>
-                        <button id="one-btn" class="value_num">1</button>
-                        <button id="two-btn" class="value_num">2</button>
-                        <button id="three-btn" class="value_num">3</button>
-                        <button id="mul-btn" class="sign">X</button>
+                        <button id="data">1</button>
+                        <button id="data">2</button>
+                        <button id="data">3</button>
+                        <button id="sign">X</button>
                     </div>
                     <div>
                         <button id="dot-btn">.</button>
-                        <button id="zero-btn" class="value_num">0</button>
+                        <button id="data">0</button>
                         <button id="equal-btn">=</button>
-                        <button id="div-btn" class="sign">/</button>
+                        <button id="sign">/</button>
                     </div>    
                 </div>
             </div>
         </div>
     </div>
+    <!-- <script src="index.js"></script> -->
 </body>
 </html>
