--- a/index.html
+++ b/index.html
@@ -19,33 +19,32 @@
                     <button id="c-btn" class="span-2">Clear</button>
                     <button id="del-btn" class="span-2">del</button>
                     <div>
-                        <button id="data">7</button>
-                        <button id="data">8</button>
-                        <button id="data">9</button>
-                        <button id="sign">-</button>
+                        <button id="data-7" class="data">7</button>
+                        <button id="data-8" class="data">8</button>
+                        <button id="data-9" class="data">9</button>
+                        <button class="sign" id="minus">-</button>
                     </div>
                     <div>
-                        <button id="data">4</button>
-                        <button id="data">5</button>
-                        <button id="data">6</button>
-                        <button id="sign">+</button>
+                        <button id="data-4" class="data">4</button>
+                        <button id="data-5" class="data">5</button>
+                        <button id="data-6" class="data">6</button>
+                        <button class="sign" id="plus">+</button>
                     </div>
                     <div>
-                        <button id="data">1</button>
-                        <button id="data">2</button>
-                        <button id="data">3</button>
-                        <button id="sign">X</button>
+                        <button id="data-1" class="data">1</button>
+                        <button id="data-2" class="data">2</button>
+                        <button id="data-3" class="data">3</button>
+                        <button class="sign" id="multi">X</button>
                     </div>
                     <div>
                         <button id="dot-btn">.</button>
-                        <button id="data">0</button>
+                        <button id="data-0" class="data">0</button>
                         <button id="equal-btn">=</button>
-                        <button id="sign">/</button>
+                        <button class="sign" id="divide">/</button>
                     </div>    
                 </div>
             </div>
         </div>
     </div>
-    <!-- <script src="index.js"></script> -->
 </body>
 </html>
