--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <button class="data" data-value="1">1</button>
                         <button class="data" data-value="2">2</button>
                         <button class="data" data-value="3">3</button>
-                        <button class="sign" data-value="x">x</button>
+                        <button class="sign" data-value="*">x</button>
                     </div>
                     <div>
                         <button class="data" data-value=".">.</button>
